5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1595_1016.log
== TEST (2019-03-26 17:55:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=srqt(s*(s-a)(s-b)(s-c))
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area=srqt(s*(s-a)(s-b)(s-c))
NameError: name 'srqt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:55:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=math.srqt(s*(s-a)(s-b)(s-c))
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area=math.srqt(s*(s-a)(s-b)(s-c))
AttributeError: module 'math' has no attribute 'srqt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:56:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=math.srqt()(s*(s-a)(s-b)(s-c))
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area=math.srqt()(s*(s-a)(s-b)(s-c))
AttributeError: module 'math' has no attribute 'srqt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:56:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=math.srqt()(s*(s-a)*(s-b)*(s-c))
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area=math.srqt()(s*(s-a)*(s-b)*(s-c))
AttributeError: module 'math' has no attribute 'srqt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:56:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=math.srqt(s*(s-a)*(s-b)*(s-c))
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    area=math.srqt(s*(s-a)*(s-b)*(s-c))
AttributeError: module 'math' has no attribute 'srqt'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:56:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=math.sqrt(s*(s-a)*(s-b)*(s-c))
print(area)
-- OUTPUT:
69.41967475975385
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 17:57:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 17:57:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
import math
a=float(input("Valor de a: "))
b=float(input("Valor de b: "))
c=float(input("Valor de c: "))
s=((a+b+c)/2)
area=math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area, 5))
-- EXECUTION TIME:
0.151455
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
